add what we do section with Design section

--- a/css0/styles.css
+++ b/css0/styles.css
@@ -25,3 +25,13 @@ h6 {
   text-align: center;
   color: white;
 }
+.wwd {
+  text-align: center;
+}
+
+.portfolio{
+  text-align: center;
+}
+.designshowing {
+  display: none;
+}
