--- a/css0/styles.css
+++ b/css0/styles.css
@@ -50,3 +50,39 @@ h4 {
   text-align: center;
   font-family: 'Fredoka One', cursive;
 }
+#logocenter{
+  margin-top: 120px;
+  height: 60px;
+  width: 60px;
+}
+
+
+#logoc {
+  margin-top: 185px;
+  height: auto;
+  width: auto;
+}
+.designhidden :hover {
+  text-decoration: underline;
+}
+.devhidden :hover {
+  text-decoration: underline;
+}
+
+.producthidden :hover {
+  text-decoration: underline;
+}
+
+#subject {
+  width: 700px;
+  height: 200px;
+}
+#name {
+  width: 290px;
+}
+#email {
+  width: 290px;
+}
+.contact {
+  text-align: center;
+}
