add google fonts with 2 links

--- a/css0/styles.css
+++ b/css0/styles.css
@@ -85,4 +85,5 @@ h4 {
 }
 .contact {
   text-align: center;
+  background-image: url(/home/francis/Documents/new/studio/images/backgrounds/c_image.jpg);
 }
