add the social icons to the page

--- a/css0/styles.css
+++ b/css0/styles.css
@@ -90,3 +90,7 @@ h4 {
   text-align: center;
   background-image: url(../images/backgrounds/c_image.jpg);
 }
+.social {
+  text-align: center;
+  font-family: 'Fredoka One', cursive;
+}
